[project]
name = "comfyui-longlook"
version = "3.0.6"
description = "FreeLong spectral blending for motion consistency and Motion Scale for temporal speed control in Wan 2.2 video generation"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/shootthesound/comfyUI-LongLook"

[tool.comfy]
PublisherId = "shootthesound"
DisplayName = "ComfyUI-LongLook"
Icon = ""
